--- a/packages/ragbits-core/pyproject.toml
+++ b/packages/ragbits-core/pyproject.toml
@@ -74,8 +74,8 @@ logfire = [
     "opentelemetry-api>=1.27.0,<2.0.0",
 ]
 phoenix = [
-    "arize-phoenix>=4.0.0,<5.0.0",
-    "openinference-instrumentation>=0.1.0,<1.0.0",
+    "arize-phoenix>=12.0.0",
+    "openinference-instrumentation>=0.1.41",
 ]
 qdrant = [
     "qdrant-client>=1.12.1,<2.0.0",
