--- a/packages/ragbits-core/pyproject.toml
+++ b/packages/ragbits-core/pyproject.toml
@@ -76,6 +76,7 @@ logfire = [
 phoenix = [
     "arize-phoenix>=12.0.0",
     "openinference-instrumentation>=0.1.41",
+    "openinference-semantic-conventions>=0.1.25",
 ]
 qdrant = [
     "qdrant-client>=1.12.1,<2.0.0",
