--- a/packages/ragbits-core/pyproject.toml
+++ b/packages/ragbits-core/pyproject.toml
@@ -109,6 +109,12 @@ google_drive = [
 weaviate = [
     "weaviate-client>=4.15.4,<5.0.0",
 ]
+postgres = [
+    "asyncpg>=0.29.0,<1.0.0",
+]
+sqlite = [
+    "aiosqlite>=0.19.0,<1.0.0",
+]
 
 [build-system]
 requires = ["hatchling"]
