--- a/packages/ragbits-core/pyproject.toml
+++ b/packages/ragbits-core/pyproject.toml
@@ -73,6 +73,11 @@ logfire = [
     "logfire[system-metrics]>=3.19.0,<4.0.0",
     "opentelemetry-api>=1.27.0,<2.0.0",
 ]
+phoenix = [
+    "arize-phoenix>=12.0.0",
+    "openinference-instrumentation>=0.1.41",
+    "openinference-semantic-conventions>=0.1.25",
+]
 qdrant = [
     "qdrant-client>=1.12.1,<2.0.0",
 ]
