--- a/packages/ragbits/pyproject.toml
+++ b/packages/ragbits/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ragbits"
-version = "1.4.0.dev202601130240"
+version = "1.4.0"
 description = "Building blocks for rapid development of GenAI applications"
 dynamic = ["readme"]
 requires-python = ">=3.10"
