--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,7 @@ nav:
         - "Search documents": how-to/document_search/search-documents.md
       - Agents:
         - "Define and use agents": how-to/agents/define_and_use_agents.md
+        - "Use hooks to customize behavior": how-to/agents/use_hooks.md
         - "Provide tools with MCP": how-to/agents/provide_mcp_tools.md
         - "Serve agents with A2A": how-to/agents/serve_ragbits_agents.md
         - "Stream downstream agents": how-to/agents/stream_downstream_agents.md
